# gnomecat

./: Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  gnomecat.desktop.in.in  gnomecat.gresource.xml  gnomecat.gschema.xml  languages.json  plurals.json  valacat.gresource.xml  valacat.gschema.xml
data/css/: gnomecat.css
data/ui/: appmenu.ui  contextpanel.ui  editpanel.ui  filechooser.ui  filelist.ui  filelistrow.ui  filetab.ui  hintpanelrow.ui  hintpanelwidget.ui  hintswidget.ui  hintswidgetrow.ui  messageeditor.ui  messageeditortab.ui  messageeditortabtiprow.ui  messagelist.ui  messagelistrow.ui  messagesfilterpopover.ui  messagetiprow.ui  notebook.ui  openedfilespanel.ui  openfilepanel.ui  originspopover.ui  originsrow.ui  pofilerow.ui  preferencesdialog.ui  preferencespanel.ui  profiledialog.ui  profilerow.ui  projecttab.ui  searchbar.ui  searchdialog.ui  simpleprofilepanel.ui  statusbarprofileslist.ui  tab.ui  tablabel.ui  toolbar.ui  welcomepanel.ui  wellcomepanel.ui  window.ui
docs/: dev_doc.md
docs/resources/: ActionsView.dia  GeneralView.dia
plugins/: Makefile.am
plugins/demochecker/: Makefile.am  demochecker.plugin  demochecker.vala
plugins/demohintprovider/: Makefile.am  demohintprovider.plugin  demohintprovider.vala
po/: Makevars  POTFILES.in  es.po  gl.po  gnomecat.pot
res/: languages.json  plurals.json  resources.xml
src/: Makefile  Makefile.am  api.vala  application.vala  checker.vala  config.h.in  config.vapi  contextpanel.ui  contextpanel.vala  demofile.vala  editpanel.vala  file.vala  filelist.ui  filelist.vala  filenavigator.vala  filter.vala  firstprofilepanel.vala  gnomecat.deps  headerbar.ui  headerbar.vala  hints.vala  hintswidget.vala  iterators.vala  language.vala  menu.ui  message.vala  messageeditor.ui  messageeditor.vala  messageeditortab.ui  messageeditortabtiprow.ui  messagelist.ui  messagelist.vala  messagelistrow.ui  messagesfilterpopover.vala  navigator.vala  notebook.ui  notebook.vala  openedfilespanel.vala  openfilepanel.vala  originspopover.vala  (+31 more)
vapi/: gettext-po.vapi
